--- a/swim/templates/tasks_completed.html
+++ b/swim/templates/tasks_completed.html
@@ -8,11 +8,14 @@
 {% include "nav.html" %}
 
 <div id="tasks-completed-page" class="page-wrapper">
+
+    {% include "menu.html" %}
+
     <div class="page container">
-        <h1>Completed Tasks</h1>
+        <h1>Completed</h1>
         <p>Small wins completed: {{ total_tasks_completed }}</p>
         <p>Total time spent (hours): {{ total_hours_spent }}</p>
-        <table class="table table-striped table-bordered">
+        <table id='completed-tasks-table' class="table table-striped table-bordered">
             <thead>
                 <tr>
                     <th>Label</th>
