--- a/swim/templates/tasks_create.html
+++ b/swim/templates/tasks_create.html
@@ -8,6 +8,9 @@
 {% include "nav.html" %}
 
 <div id="task-create-page" class="page-wrapper">
+
+    {% include "menu.html" %}
+
     <div class="page container">
         <h1>Create Task</h1>
         <p>"A small win is a concrete, complete, implemented outcome of moderate importance...<br>Small wins are controllable opportunities that produce visible results." – Karl Weick</p>
@@ -20,6 +23,9 @@
                    class="form-control"/>
             <input type="text" name="labels"
                    placeholder="Comma-separated list of labels"
+                   class="form-control"/>
+            <input type="text" name="start_date"
+                   placeholder="Start date (YYYY-MM-DD HH:MM) (Optional)"
                    class="form-control"/>
             <input type="submit" class="btn" value="Create"/>
         </form>
