V. simple timer. Let's see how useful it is.

--- a/swim/templates/menu.html
+++ b/swim/templates/menu.html
@@ -3,5 +3,10 @@
         <a href="task/create" class="btn btn-primary">Create</a>
         <a href="task/upcoming" class="btn btn-primary">Upcoming</a>
         <a href="task/completed" class="btn btn-primary">Completed</a>
+
+        <div id="timer" class="pull-right">
+            <span id="time" class="pull-left"></span>
+            <button id="start-btn" class="btn btn-info">Start</button>
+        </div>
     </div>
 </div>
