--- a/swim/static/css/main.css
+++ b/swim/static/css/main.css
@@ -119,6 +119,14 @@ h6 {
   padding-top: 15px;
   margin-top: 10px;
 }
+#index-page #timer #time {
+  color: red;
+  font-size: 20px;
+  position: relative;
+  top: 2px;
+  right: 10px;
+  font-weight: bold;
+}
 #task-create-page input[type="text"] {
   width: 350px;
   margin-bottom: 10px;
