--- a/swim/static/css/main.less
+++ b/swim/static/css/main.less
@@ -144,6 +144,17 @@ h1, h2, h3, h4, h5, h6 {
     padding-top: 15px;
     margin-top: 10px;
   }
+
+  #timer {
+    #time {
+      color: red;
+      font-size: 20px;
+      position: relative;
+      top: 2px;
+      right: 10px;
+      font-weight: bold;
+    }
+  }
 }
 
 #task-create-page {
