--- a/swim/static/css/main.less
+++ b/swim/static/css/main.less
@@ -181,6 +181,12 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+#report-page {
+  #stats {
+    margin-top: 20px;
+  }
+}
+
 /* Plugin overrides.
  * ----------------- */
 .sortable-dragging {
