--- a/swim/templates/report.html
+++ b/swim/templates/report.html
@@ -10,44 +10,47 @@
 <script src="static/js/highcharts.js"></script>
 <script src="static/js/report.js"></script>
 
-<div id="overview-page" class="page-wrapper">
+<div id="report-page" class="page-wrapper">
 
     {% include "menu.html" %}
 
     <div class="page container">
-        <div>
-            <h2>Statistics</h2>
-            <table class="table">
-                <tr>
-                    <td>Total hours</td>
-                    <td>{{ report.total_hrs }}</td>
-                </tr>
-                <tr>
-                    <td>Average hours per day</td>
-                    <td>{{ report.hrs_day }}</td>
-                </tr>
-                <tr>
-                    <td>Median hours per day</td>
-                    <td>{{ report.median_hrs }}</td>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <h2>Subtotals</h2>
-            <table class="table">
-                {% for label, subtotal in report.label_subtotals.items() %}
+        <h2>Report</h2>
+        <div id="stacked-chart"></div>
+        <div id="stats" class="row">
+            <div class="col-md-4">
+                <h2>Statistics</h2>
+                <table class="table">
                     <tr>
-                        <td>{{ label }}</td>
-                        <td>{{ subtotal }}</td>
+                        <td>Total hours</td>
+                        <td>{{ stats.total_hrs|round(1) }}</td>
                     </tr>
-                {% endfor %}
-            </table>
-        </div>
-        <div id="visualization">
+                    <tr>
+                        <td>Average hours per day</td>
+                        <td>{{ stats.hrs_day|round(1) }}</td>
+                    </tr>
+                    <tr>
+                        <td>Median hours per day</td>
+                        <td>{{ stats.median_hrs|round(1) }}</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-md-4">
+                <h2>Subtotals</h2>
+                <table class="table">
+                    {% for label, subtotal in stats.label_subtotals.items() %}
+                        <tr>
+                            <td>{{ label }}</td>
+                            <td>{{ subtotal|round(1) }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
+            <div class="col-md-4" id="pie-chart"></div>
         </div>
     </div>
     <script>
-        window.SWIM.visualize({{ series|safe }}, {{ days|safe }});
+        window.SWIM.visualize({{ stackedSeries|safe }}, {{ days|safe }}, {{ pieSeries|safe }});
     </script>
 </div>
 
