--- a/swim/static/css/main.less
+++ b/swim/static/css/main.less
@@ -187,6 +187,12 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+#everyday-page {
+  table {
+    margin-top: 20px;
+  }
+}
+
 /* Plugin overrides.
  * ----------------- */
 .sortable-dragging {
