--- a/swim/templates/everyday.html
+++ b/swim/templates/everyday.html
@@ -18,6 +18,13 @@
         <p><em>Everyday</em></p>
         <div><strong>Days so far:</strong> {{ days_so_far }}</div>
         <div><strong>Total hours:</strong> {{ total_hrs }}</div>
+        <table>
+            {% for task in tasks %}
+                <tr>
+                    <td>{{ task.description }}</td>
+                </tr>
+            {% endfor %}
+        </table>
     </div>
 </div>
 
