--- a/swim/static/css/variables.less
+++ b/swim/static/css/variables.less
@@ -1,5 +1,6 @@
 @color-blue: #1976D2;
 @color-pink: #faafa6;
+@color-red: #c4151e;
 
 @font-family-accent: 'Roboto';
 @font-family-base: arial, sans-serif;
