--- a/swim/templates/menu.html
+++ b/swim/templates/menu.html
@@ -3,7 +3,7 @@
         <a href="task/create" class="btn btn-primary">Create</a>
         <a href="task/upcoming" class="btn btn-primary">Upcoming</a>
         <a href="task/completed" class="btn btn-primary">Completed</a>
-        <a href="report" class="btn btn-primary">Weekly Report</a>
+        <a href="report" class="btn btn-primary">Report</a>
 
         <div id="timer" class="pull-right">
             <span id="time" class="pull-left"></span>
