--- a/swim/static/css/main.less
+++ b/swim/static/css/main.less
@@ -157,26 +157,8 @@ h1, h2, h3, h4, h5, h6 {
       }
     }
 
-    //&#todo {
-    //
-    //  li {
-    //    background-color: #fddeda;
-    //    border-top: 1px solid @color-pink;
-    //    border-left: 1px solid @color-pink;
-    //    border-right: 1px solid @color-pink;
-    //    border-bottom: 1px solid @color-pink;
-    //
-    //    //&.first {
-    //    //  background-color: @color-pink;
-    //    //}
-    //  }
-    //}
-
-    li.upcoming {
-      font-weight: bold;
-    }
-
     &#done {
+      opacity: 0.6;
       li {
         span {
           text-decoration: line-through;
