--- a/swim/templates/everyday.html
+++ b/swim/templates/everyday.html
@@ -18,6 +18,7 @@
         <p><em>Everyday</em></p>
         <div><strong>Days so far:</strong> {{ days_so_far }}</div>
         <div><strong>Total hours:</strong> {{ total_hrs }}</div>
+        <div><strong>Hours behind:</strong> {{ hours_behind }}</div>
         <div><strong>To catch up (min / day):</strong> {{ catchup_min_day }}</div>
     </div>
 </div>
