--- a/swim/templates/task_edit.html
+++ b/swim/templates/task_edit.html
@@ -26,11 +26,18 @@
                 <label>Labels</label>
                 <input class='form-control' name='labels' value="{{ task.labels_as_string }}" />
             </div>
-            <div class='form-group'>
-                <label>Start date (YYYY-MM-DD HH:MM) (Optional)</label>
-                <input class='form-control' name='start_date' value="{{ task.start_date_string }}" />
-            </div>
-            <input class="btn" type="submit"/>
+            {% if task.date_completed %}
+                <div class='form-group'>
+                    <label>Completed date (YYYY-MM-DD HH:MM)</label>
+                    <input class='form-control' name='date_completed' value="{{ task.date_completed }}" />
+                </div>
+            {% else %}
+                <div class='form-group'>
+                    <label>Start date (YYYY-MM-DD HH:MM) (Optional)</label>
+                    <input class='form-control' name='start_date' value="{{ task.start_date_string }}" />
+                </div>
+            {% endif %}
+            <input class="btn btn-primary" type="submit"/>
         </form>
         <form action="task/delete/{{ task.id}}" method="post">
             <input class="btn btn-warning" onclick="return confirm('Are you sure?');" type="submit" value="Delete"/>
